virtual_fun_override_final/note.txt

在Animal里的moving函数后加：final
则编译器出错：

g++ -o hello v.cpp
v.cpp:14:14: warning: override controls (override/final) only available with -std=c++11 or -std=gnu++11 [enabled by default]
  void moving() final
              ^
v.cpp:14:7: error: ‘void Animal::moving()’ marked final, but is not virtual
  void moving() final
       ^
make: *** [hello] Error 1

表示 moving不是一个虚函数，不能使用final
---------------------------------

在Animal里的eating函数后加：final

g++ -o hello v.cpp
v.cpp:18:22: warning: override controls (override/final) only available with -std=c++11 or -std=gnu++11 [enabled by default]
  virtual void eating() final //虚函数。
                      ^
v.cpp:39:7: error: virtual function ‘virtual void Fish::eating()’
  void eating()
       ^
v.cpp:18:15: error: overriding final function ‘virtual void Animal::eating()’
  virtual void eating() final //虚函数。
               ^
make: *** [hello] Error 1

表示 子类Fish 覆盖了eating的虚函数。由于这个函数被final了，所以提示错误。
